content/nomad/v0.11.x/content/docs/commands/deployment/resume.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Nomad and the Nomad logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/nomad/blob/-/LICENSE

layout: docs
page_title: 'Commands: deployment resume'
sidebar_title: resume
description: |
  The deployment resume command is used to resume a paused deployment.
---

# Command: deployment resume

The `deployment resume` command is used used to unpause a paused deployment.
Resuming a deployment will resume the placement of new allocations as part of
rolling deployment.

## Usage

```plaintext
nomad deployment resume [options] <deployment id>
```

The `deployment resume` command requires a single argument, a deployment ID or
prefix.

## General Options

@include 'general_options.mdx'

## Resume Options

- `-detach`: Return immediately instead of monitoring. A new evaluation ID
  will be output, which can be used to examine the evaluation using the
  [eval status] command

- `-verbose`: Show full information.

## Examples

Manually resume a deployment:

```shell-session
$ nomad deployment resume c848972e
Deployment "c848972e-dcd3-7354-e0d2-39d86642cdb1" resumed

==> Monitoring evaluation "5e266d42"
    Evaluation triggered by job "example"
    Evaluation within deployment: "c848972e"
    Allocation "00208424" created: node "6240eed6", group "web"
    Allocation "68c72edf" created: node "6240eed6", group "cache"
    Allocation "00208424" status changed: "pending" -> "running"
    Evaluation status changed: "pending" -> "complete"
==> Evaluation "5e266d42" finished with status "complete"
```

[eval status]: /docs/commands/eval-status
